# thread-vs-fork-in-cpp---Matrices

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile2  README.md  brainstorming.txt  cmake_install.cmake  fork.txt  forkBenchmark.txt  launch.sh  matrixcpp  simple.txt  thread.txt  threadBenchmark.txt
include/matrixcpp/: Matrix.h  Serializer.h  SharedCalculator.h
results/: visualization notebook.ipynb
results/.ipynb_checkpoints/: visualization notebook-checkpoint.ipynb
results/Fork before threads/: fork.txt  thread.txt
results/Linux/Fork before thread/: fork.txt  thread.txt
results/Linux/Same loop - Thread before fork/: fork.txt  thread.txt
results/Linux/Same loop - fork before thread/: fork.txt  thread.txt
results/Linux/Thread before fork/: fork.txt  thread.txt
results/Same loop/: fork.txt  thread.txt
results/Thread before fork/: fork.txt  thread.txt
results/WSL/Fork before threads/: fork.txt  thread.txt
results/WSL/Same loop/: fork.txt  thread.txt
results/WSL/Thread before fork/: fork.txt  thread.txt
results/new results/: forkBenchmark.txt  threadBenchmark.txt
src/: Matrix.cpp  Serializer.cpp  SharedCalculator.cpp  main.cpp
